Added the possibility for custom activation gestures

--- a/Example/Example/Base.lproj/Main.storyboard
+++ b/Example/Example/Base.lproj/Main.storyboard
@@ -4,51 +4,50 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Welcome-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Table View Controller - Welcome!-->
+        <scene sceneID="Tcu-SQ-h9q">
             <objects>
-                <viewController id="vXZ-lx-hvc" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ton-zc-lDG"/>
-                        <viewControllerLayoutGuide type="bottom" id="moc-ZK-K1Z"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                <tableViewController id="9qn-vg-IVj" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vDD-qN-miD">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Z5G-bi-sHg">
-                                <rect key="frame" x="20" y="72" width="280" height="366"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris malesuada ligula enim, ut mollis est dapibus sed. Pellentesque et facilisis risus. Phasellus ut risus leo. Aliquam erat volutpat. Maecenas euismod lacus rutrum leo viverra lobortis. Integer et molestie sapien, ac facilisis orci. Cras auctor molestie diam in scelerisque. Nulla aliquet gravida auctor. Proin lobortis mi quis ante sagittis venenatis. Nam sed ultrices diam, eget porta arcu. Proin venenatis nec felis vitae vulputate. Pellentesque ac tristique magna, sed scelerisque felis. Ut lacus sapien, laoreet eget magna eget, sagittis blandit diam.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="INr-V1-3az">
-                                <rect key="frame" x="177" y="518" width="123" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Show me a kitten!">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="oYC-U6-60w" kind="push" id="Trs-u1-HZn"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="moc-ZK-K1Z" firstAttribute="top" secondItem="INr-V1-3az" secondAttribute="bottom" constant="20" id="1Sb-qQ-3MB"/>
-                            <constraint firstItem="Z5G-bi-sHg" firstAttribute="top" secondItem="ton-zc-lDG" secondAttribute="bottom" constant="20" symbolic="YES" id="5SZ-nl-uH4"/>
-                            <constraint firstItem="Z5G-bi-sHg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" symbolic="YES" id="ABQ-lZ-PoT"/>
-                            <constraint firstAttribute="trailing" secondItem="Z5G-bi-sHg" secondAttribute="trailing" constant="20" symbolic="YES" id="x6E-e7-rlG"/>
-                            <constraint firstAttribute="trailing" secondItem="INr-V1-3az" secondAttribute="trailing" constant="20" id="yDO-iE-WnH"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Welcome" id="4Dn-iD-sDV"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="VgF-jS-69Z">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="lTp-Ju-Syd" style="IBUITableViewCellStyleDefault" id="61u-fs-PFu">
+                                        <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="61u-fs-PFu" id="Jhf-5J-OKj">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Show me a kitten!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lTp-Ju-Syd">
+                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="oYC-U6-60w" kind="push" id="cvX-jr-uo1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="9qn-vg-IVj" id="y2d-89-dhX"/>
+                            <outlet property="delegate" destination="9qn-vg-IVj" id="BNY-KV-mrB"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Welcome!" id="JwG-ZV-9mu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="drw-dC-s9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="595" y="-189"/>
+            <point key="canvasLocation" x="574" y="-176"/>
         </scene>
         <!--View Controller - Aww-->
         <scene sceneID="7pC-MA-s2b">
@@ -79,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j3U-dS-yFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="989" y="-189"/>
+            <point key="canvasLocation" x="961" y="-176"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Fgd-HL-8gH">
@@ -92,12 +91,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="0iR-zP-HNc"/>
+                        <segue destination="9qn-vg-IVj" kind="relationship" relationship="rootViewController" id="rJ2-dh-wzo"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UT9-q9-sd0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136" y="-189"/>
+            <point key="canvasLocation" x="185" y="-176"/>
         </scene>
     </scenes>
     <resources>
